Using latest avfoundation. Added videoref delete method